syntax = "proto3";

package gateway.v1.captcha;

import "google/api/annotations.proto";

option go_package = "vw_gateway/api/v1/captcha;captv1";
service Captcha {
    rpc GetImageCaptcha(GetImageCaptchaRequest) returns (GetImageCaptchaResp) {
        option (google.api.http) = {
            get: "/api/v1/captcha/graphicCaptcha",
        };
    }

    rpc GetCodeCaptcha(GetCodeCaptchaReq) returns (GetCodeCaptchaResp) {
        option (google.api.http) = {
            get: "/api/v1/captcha/codeCaptcha",
        };
    }
}

message GetImageCaptchaRequest {
}
message GetImageCaptchaResp {
    message CaptchaResult {
        string id     = 1;
        string b64log = 2;
        string answer = 3;
    }
    int32 status_code            = 1;
    string msg                   = 2;
    CaptchaResult captcha_result = 3;
}

message GetCodeCaptchaReq {
    string email = 1;  // user email
}
message GetCodeCaptchaResp {
    int32 status_code = 1;
    string msg        = 2;
    string code       = 3;
}